# Lab4_SP

./: CMakeLists.txt  Makefile  build.ninja  main.cpp  rules.ninja
